[gd_scene load_steps=3 format=3 uid="uid://dy2hfp16618ef"]

[ext_resource type="Script" path="res://ui_elements/tick_button/TickButton.gd" id="1_npk1i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qn4nv"]

[node name="TickButton" type="PanelContainer"]
custom_minimum_size = Vector2(60, 0)
offset_right = 76.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_qn4nv")
script = ExtResource("1_npk1i")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ValueLabel" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"SettingsLabel"
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonUp" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
focus_mode = 0
text = "▲"

[node name="ButtonDown" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
focus_mode = 0
text = "▼"

[connection signal="focus_exited" from="HBoxContainer/ValueLabel" to="." method="_on_value_label_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/ValueLabel" to="." method="_on_value_label_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/ValueLabel" to="." method="_on_value_label_text_submitted"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonUp" to="." method="_on_button_up_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonDown" to="." method="_on_button_down_pressed"]
